--- a/server/package.json
+++ b/server/package.json
@@ -1,8 +1,8 @@
 {
   "scripts": {
-    "start": "remoteServer.js"
+    "start": "server.js"
   },
-  "version": "0.0.0-17",
+  "version": "0.0.0-19",
   "engines": {
     "node": "0.6.x"
   },
